--- a/www/style.css
+++ b/www/style.css
@@ -253,6 +253,9 @@ h4 {
     pointer-events: none;
 }
 
+#checked {
+    filter: drop-shadow(0px 0px 5px rgb(255, 0, 0)) drop-shadow(0px 0px 10px rgba(255, 0, 0, 0.904)) drop-shadow(0px 0px 15px rgba(255, 0, 0, 0.87));
+}
 /* Piece images */
 .piece {
     position: absolute;
