--- a/www/style.css
+++ b/www/style.css
@@ -278,6 +278,20 @@ h4 {
     -webkit-transform: translate(-75%, -90%) rotateX(52deg) rotateZ(5deg) skew(22deg) scale3d(1.0, 3.0, 1.0);
 }
 
+#status {
+    font-size: 4em;
+    color: white;
+    position: fixed;
+    text-align: right;
+    bottom: -4px;
+    right: 4px;
+    z-index: 10;
+    text-transform: uppercase;
+    margin-bottom: 4px;
+    line-height: 0.8em;
+    font-weight: 500;
+    opacity: 0.5;
+}
 
 /* Radio Buttons CSS */
 [type=radio] {
